# wasm-wasi-demo

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md
cloud-consumer/: Cargo.toml
cloud-consumer/src/: main.rs
cloud-provider/aws/: Cargo.toml
cloud-provider/aws/src/: lib.rs
cloud-provider/azure/: CMakeLists.txt
cloud-provider/azure/src/: lib.c
echo-server/: Cargo.toml
echo-server/src/: main.rs
wit-demo/: Cargo.toml
wit-demo/app/: Cargo.toml
wit-demo/app/src/: main.rs
wit-demo/app/wasm/azure/: Cargo.toml
wit-demo/app/wasm/azure/src/: lib.rs
wit-demo/app/wit/: publish.wit
wit-demo/components/http/: Cargo.toml
wit-demo/components/http/src/: bindings.rs  lib.rs
wit-demo/components/io/: Cargo.toml
wit-demo/components/io/src/: bindings.rs  lib.rs
wit-demo/src/: bindings.rs  main.rs
wit-demo/wit/: wit-test.wit
