[package]
name = "io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
  "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "test:wit-test"

[package.metadata.component.target]
path = "../../wit/wit-test.wit"
world = "input-output"

[package.metadata.component.dependencies]
